syntax = "proto3";

package syncProto;

service Synchronizer {
  rpc Sync (Device) returns (stream Device) {}
  rpc LightSwitcher (Device) returns (Empty) {}
  rpc ListDevices (Empty) returns (stream Device) {}
}

message Empty {
}

message Device {
  int32 building = 1;
  int32 room = 2;
  bool ledOn = 3;
  string label = 4;
  int32 onTime =5;
}
